# ssp

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aes.rs  arrays.rs  channel_value_data.rs  channels.rs  configure_bezel.rs  crc.rs  dataset_version.rs  disable.rs  disable_payout.rs  display_off.rs  display_on.rs  empty.rs  enable_payout.rs  encrypted.rs  encryption_reset.rs  error.rs  event_ack.rs  firmware.rs  get_barcode_data.rs  get_barcode_inhibit.rs  get_barcode_reader_configuration.rs  host_protocol_version.rs  jsonrpc.rs  keys.rs  len.rs  lib.rs  macros.rs  message.rs  payout_by_denomination.rs  poll.rs  poll_with_ack.rs  primes.rs  reject.rs  request_key_exchange.rs  reset.rs  rng.rs  serial_number.rs  set_barcode_reader_configuration.rs  set_encryption_key.rs  set_generator.rs  (+6 more)
src/channel_value_data/: command.rs  response.rs
src/configure_bezel/: command.rs  response.rs
src/dataset_version/: command.rs  response.rs
src/disable/: command.rs  response.rs
src/disable_payout/: command.rs  response.rs
src/display_off/: command.rs  response.rs
src/display_on/: command.rs  response.rs
src/empty/: command.rs  response.rs
src/enable/: command.rs  response.rs
src/enable_payout/: command.rs  response.rs
src/encrypted/: command.rs  response.rs  wrapped.rs
src/encryption_reset/: command.rs  response.rs
src/event_ack/: command.rs  response.rs
src/firmware/: command.rs  download_command.rs  download_response.rs  header_command.rs  header_response.rs  response.rs
src/get_barcode_data/: command.rs  response.rs
src/get_barcode_inhibit/: command.rs  response.rs
src/get_barcode_reader_configuration/: command.rs  response.rs
src/hold/: command.rs  response.rs
src/host_protocol_version/: command.rs  response.rs
src/jsonrpc/: client.rs  request.rs  response.rs
src/last_reject_code/: command.rs  response.rs
src/message/: variant.rs
src/payout_by_denomination/: command.rs  response.rs
src/poll/: command.rs  response.rs
src/poll_with_ack/: command.rs  response.rs
src/primes/: small_primes.rs
src/reject/: command.rs  response.rs
src/request_key_exchange/: command.rs  response.rs
src/reset/: command.rs
src/serial_number/: command.rs  response.rs
src/set_barcode_inhibit/: command.rs  response.rs
src/set_barcode_reader_configuration/: command.rs  response.rs
src/set_encryption_key/: command.rs  response.rs
src/set_generator/: command.rs  response.rs
(+67 files in other folders)
