[package]
name = "ssp"
version = "0.2.2"
edition = "2021"
authors = ["SSP Rust Developers"]
description = "Messages and related types for implementing the SSP/eSSP serial communication protocol"
keywords = ["no-std", "serial", "ssp", "bill-acceptor", "bill-validator"]
categories = ["no-std"]
repository = "https://github.com/ssp-rs/ssp"
license = "MIT"

[dependencies]
bitfield = "0.14"
crc = "3.0"
heapless = "0.7"
log = { version = "0.4", default-features = false }
aes = { version = "0.8.2" }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
parking_lot = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serialport = { version = "4.2", default-features = false, optional = true }
sha2 = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
optional = true

[dependencies.smol-jsonrpc]
version = "0.1"
optional = true

[features]
default = ["nv200"]
std = ["log/std", "rand/std", "rand/std_rng", "serde/std", "serde_json/std", "serialport", "smol-jsonrpc/std"]
nv200 = []
jsonrpc = ["serde_json", "smol-jsonrpc"]
